latihan landing page vol 2

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="header">
                 <div class="header-left">
                     <div class="header-left-subheading">
-                        <img src="./assets/briefcase.svg" alt="">
+                        <img src="./assets/header/bintang.svg" alt="">
                         <span class="header-left-subheading-txt">Top market company</span>
                     </div>
                     <h1 class="header-heading">
@@ -47,8 +47,8 @@
                         udix is the worlds first smart workspace. We bring all your teams content together while letting you use the tools you love.
                     </h5>
                     <a href="#" class="header-btn">
-                        Read More
-                        <img src="./assets/briefcase.svg" alt="">
+                        
+                        <img src="./assets/content/link+icon.svg" alt="">
                     </a>
                 </div>
                 <div class="header-right">
@@ -56,9 +56,9 @@
                         <h1 class="header-right-heading">Get started now</h1>
                         <form action="post" class="header-right-form">
                             <input type="text" placeholder="Name">
-                            <input type="text" placeholder="Name">
-                            <input type="text" placeholder="Name">
-                            <input type="text" placeholder="Name">
+                            <input type="text" placeholder="Email">
+                            <input type="text" placeholder="Phone Number">
+                            <input type="text" placeholder="Company Name">
                         </form>
                         <a href="#" class="header-right-btn">
                             Sign up
